<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        tools:context=".feature.login.LoginActivity">


    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="0dp"
        android:layout_height="@dimen/login_logo_height"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_logo"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_logo" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/login_message" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/login_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:visibility="visible"
            tools:text="Usuário ou senha inválido"
            tools:layout_editor_absoluteX="0dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/login_user_input"
    />

    <EditText
            android:id="@+id/login_user_input"
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edittext_height"
            android:hint="@string/login_hint_user"
            android:textSize="@dimen/login_text_size"

            tools:layout_editor_absoluteX="0dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/login_password_input"/>

    <EditText
            android:id="@+id/login_password_input"
            style="@style/EditTextBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edittext_height"
            android:hint="@string/login_hint_password"
            android:textSize="@dimen/login_text_size"
            android:inputType="textPassword" tools:layout_editor_absoluteX="0dp" android:layout_marginBottom="68dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_logo"/>

    <Button
            android:id="@+id/login_signin"
            style="@style/ButtonBackground"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="@dimen/login_button_height"
            android:text="@string/login_button_text"
            android:textSize="@dimen/login_text_size"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
            tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>