<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/statements_toolbar"
            style="@style/BankToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/statements_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/statements_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/statements_exit"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/ic_exit"
                    tools:ignore="MissingConstraints"/>

            <TextView
                    android:id="@+id/statements_account_name"
                    style="@style/BankTextView.Header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/statements_logout"
                    tools:text="User Name Test" tools:ignore="MissingConstraints"/>

            <TextView
                    android:id="@+id/statements_title_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/statements_account"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintTop_toBottomOf="@+id/statements_account_name"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/statements_account"
                    style="@style/BankTextView.Header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/statements_title_account"
                    tools:text="2050 / 01.111222-4"/>

            <TextView
                    android:id="@+id/statements_title_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/statements_balance"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintTop_toBottomOf="@+id/statements_account"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/statements_balance"
                    style="@style/BankTextView.Header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/statements_title_balance"
                    tools:text="R$ 1.987,05"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:id="@+id/statements_news"
            style="@style/BankTextView.Title"
            android:layout_width="334dp"
            android:layout_height="18dp"
            android:text="@string/statements_news"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statements_toolbar" app:layout_constraintHorizontal_bias="0.36"/>

    <!--<androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
            <!--android:id="@+id/statements_swip_refresh"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/statments_swiperefresh"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@id/statements_news">-->

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/statements_rv"
            android:layout_width="match_parent"
            android:layout_height="441dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/statemens_item" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/statements_news"/>

    <!--</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>